--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightblue;
 }
+h1{
+    text-align: center;
+    font-size: 60px;
+}
