--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,10 @@ h1{
     text-align: center;
     font-size: 60px;
 }
+h2{
+    color: lightseagreen;
+}
+h3{
+    color: maroon;
+    text-align: right;
+}
